<resources>
    <string name="app_name">HomeWork_repeat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description:</string>
    <string name="title">Title:</string>
    <string name="descriptio">Description:</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="saveButton">SAVE</string>
    <string name="input">Name</string>
    <string name="profile_hint">Name</string>
    <string name="todo">TODO</string>
    <string name="update">UPDATE</string>
    <string name="number_phone">Number phone:</string>
    <string name="send">send</string>
    <string name="number">number</string>
    <string name="google">google</string>
    <string name="registration">Registration Acount</string>
    <string name="code">number code:</string>
    <string name="exit_acount_google">Exit acount google</string>
    <string name="_996">+996</string>
    <string name="car_one">Car one</string>
    <string name="car_two">Car two</string>
    <string name="text">text</string>
    <string name="marka">Marka:</string>
    <string name="model">Model:</string>
</resources>